[gd_scene load_steps=4 format=2]

[ext_resource path="res://SPRITES/background.png" type="Texture" id=1]
[ext_resource path="res://LEVELS/level0.tscn" type="PackedScene" id=2]
[ext_resource path="res://splitscreen_component.gd" type="Script" id=3]

[node name="splitscreen_component" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="bordercolor" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/vseparation = 5
custom_constants/hseparation = 5
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container1" type="ViewportContainer" parent="GridContainer"]
margin_right = 509.0
margin_bottom = 297.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="GridContainer/container1"]
size = Vector2( 509, 297 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="GridContainer/container1/Viewport1"]
current = true

[node name="level0" parent="GridContainer/container1/Viewport1" instance=ExtResource( 2 )]

[node name="container2" type="ViewportContainer" parent="GridContainer"]
margin_left = 514.0
margin_right = 1023.0
margin_bottom = 297.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="GridContainer/container2"]
size = Vector2( 509, 297 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="GridContainer/container2/Viewport2"]
current = true

[node name="container3" type="ViewportContainer" parent="GridContainer"]
margin_top = 302.0
margin_right = 509.0
margin_bottom = 599.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport3" type="Viewport" parent="GridContainer/container3"]
size = Vector2( 509, 297 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="GridContainer/container3/Viewport3"]
current = true

[node name="container4" type="ViewportContainer" parent="GridContainer"]
margin_left = 514.0
margin_top = 302.0
margin_right = 1023.0
margin_bottom = 599.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport4" type="Viewport" parent="GridContainer/container4"]
size = Vector2( 509, 297 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="GridContainer/container4/Viewport4"]
current = true
